# lammps-mlip-package

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md
.github/workflows/: test.yml  unittest.yml
containers/: CMakeLists.txt  Dockerfile  Dockerfile.gpu  Makefile  Makefile.lammps  Makefile.mlip_kokkos  USER-MLIP.cmake  install.sh  ubuntu_nvidia.def
docker/: Dockerfile  Makefile.lammps  README.md  install.sh
docs/: README.md  conf.py  dev_commands.md  development.md  examples.md  formulation.md  implementation.tex  index.md  input_command.md  install.md  python_interface.md  references.bib  requirements.txt
example/: README.md  eam.log.lammps  in.eam  in.mlip  make_lammps_structure.py  mlip.log.lammps  structure.lammps
example/triclinic/: in.tricli.min.mlip  in.tricli.nve.mlip  in.tricli.run0.mlip  make_lammps_structure_triclinic.ipynb  structure_00064_conventional.lammps
src/USER-MLIP/: mlip_basis_function.cpp  mlip_basis_function.h  mlip_features.cpp  mlipkk.cpp  (+58 more)
test/: CMakeLists.txt  README.md  test_mlip_features.cpp
test/regression/: README.md  dump.atom.gtinv-434  dump.atom.gtinv-820  dump.atom.pair-17  dump.atom.pair-60  dump.atom.regression  gtinv-197-conv.in  gtinv-197-stress.in  gtinv-197-tricli.in  gtinv-197.in  gtinv-434.in  gtinv-820.in  in.mlip  log.lammps.gtinv-197  log.lammps.gtinv-197.conv64  log.lammps.gtinv-197.stress.ev_tally  log.lammps.gtinv-434  log.lammps.gtinv-820  log.lammps.pair-17  log.lammps.pair-60  log.lammps.regression  pair-17.in  pair-60.in  regression.py  structure.lammps  structure_00064_triclinic.lammps  test.sh
